# videostream

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HARDWARE.md  IMX95.md  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  VPU_OPTIMIZATIONS_REPORT.md  pyproject.toml  pytest.ini  release.toml  requirements.txt  rust-toolchain.toml  setup.py  sonar-project.properties  sonar.py  toolchain-aarch64.cmake  videostream.pc.in
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/scripts/: check_license_policy.py  generate_notice.py  generate_sbom.sh  validate_notice.py
.github/workflows/: AUDIT.md  README.md  build-packages.yml  build.yml  ci.yml  release.yml  sbom.yml  test.yml
cmake/: TargetArch.cmake  Version.cmake  aarch64-linux-gnu.cmake
crates/videostream/: Cargo.toml  README.md
crates/videostream-cli/: Cargo.toml
crates/videostream-cli/src/: convert.rs  devices.rs  error.rs  info.rs  main.rs  metrics.rs  receive.rs  record.rs  stream.rs  utils.rs
crates/videostream-cli/tests/: cli.rs  devices_cli.rs
crates/videostream-sys/: Cargo.toml  README.md  build.rs  update.sh  wrapper.h
crates/videostream-sys/src/: ffi.rs  lib.rs
crates/videostream/examples/: test_client_process.rs  test_host_process.rs
crates/videostream/src/: camera.rs  client.rs  colorimetry.rs  decoder.rs  encoder.rs  fourcc.rs  frame.rs  host.rs  lib.rs
crates/videostream/src/v4l2/: device.rs  enumerator.rs  mod.rs
crates/videostream/tests/: integration_pipeline.rs  minimal_encoder_test.rs  v4l2_discovery.rs
debian/: .gitignore  changelog  changelog.in  control  copyright  gen-changelog.py  libvideostream-dev.install  libvideostream-gstreamer.install  libvideostream.install  rules  videostream-python.install  videostream-samples.install  videostream-tools.install
deepview/videostream/: __init__.py  frame.py  host.py  library.py
doc/: .gitignore  Doxyfile  Makefile  V4L2_CODEC_IMPLEMENTATION.md  capi.rst  conf.py  csamples.rst  gstreamer.rst  index.rst  intro.rst  make.bat  misra-c-2012.txt  quickstart.rst  requirements.txt  syntax.tex  template.tex
ext/include/: dma-buf.h  libg2d.h
ext/stb/: CMakeLists.txt
ext/vpu_wrapper/: CMakeLists.txt  README.md  codec_dlopen.c  codec_dlopen.h  hantro_dec.c  hantro_dec.h  hantro_vc8000e_enc.c  hantro_vc8000e_enc.h  vpu_wrapper.h  vpu_wrapper_hantro.c  vpu_wrapper_hantro_VCencoder.c
ext/vpu_wrapper/hantro_VC8000E_enc/: vp9_enums.h
ext/vpu_wrapper/hantro_dec/: OMX_Audio.h  OMX_Component.h  OMX_ComponentExt.h  OMX_Core.h  OMX_CoreExt.h  OMX_IVCommon.h  OMX_Image.h  OMX_ImageExt.h  OMX_Index.h  OMX_IndexExt.h  OMX_Other.h  OMX_Video.h  OMX_VideoExt.h  basecomp.h  codec.h  codec_pp.h  dwl.h  hevcdecapi.h  msgque.h  port.h  util.h  vsi_vendor_ext.h
gst/: plugin.c  vslsink.c  vslsink.h  vslsrc.c  vslsrc.h
include/: videostream.h
lib/: client.c  codec_backend.c  codec_backend.h  common.c  common.h  decoder.c  decoder_hantro.c  decoder_hantro.h  decoder_hantro_dmabuf.c  decoder_v4l2.c  decoder_v4l2.h  encoder.c  encoder_hantro.c  encoder_hantro.h  encoder_hantro_dmabuf.c  encoder_v4l2.c  encoder_v4l2.h  frame.c  frame.h  g2d.c  g2d.h  host.c  v4l2.c  v4l2.h  v4l2_device.c  v4l2_device.h  videostream.c
scripts/: coverage_summary.py  cppcheck.bat  cppcheck.sh  cppcheck.txt  fix_coverage_paths.py  misra.json  test_host_client.sh
src/: CMakeLists.txt  benchmark_decoder.c  benchmark_e2e.c  camhost.c  display.c  framelock_demo.c  monitor.c  record.c  test_client.c  test_decoder.c  test_encoder.c  test_encoder_4k_tiles.c  test_encoder_keyframes_4k_tiles.c  test_host.c  test_shm.c  vsl-v4l2-info.c
tests/: test_client.py  test_frame.py  test_host.py  test_ipc.py  test_library.py
tools/: analyze_pipeline.py
videostream/: decoder.py  library.py
