[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.4.0-rc0"
authors = ["Au-Zone Technologies"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/au-zone/videostream"
homepage = "https://edgefirst.ai"
rust-version = "1.70"  # MSRV

[workspace.dependencies]
dma-buf = "0.4.0"
unix-ts = "1.0.0"
# Shared dependencies across workspace
videostream-sys = { version = "1.4.0-rc0", path = "crates/videostream-sys" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
