[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.5.5"
authors = ["Au-Zone Technologies"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/EdgeFirstAI/videostream"
homepage = "https://edgefirst.ai"
rust-version = "1.70"  # MSRV

[workspace.dependencies]
dma-buf = "0.4.0"
unix-ts = "1.0.0"
# Shared dependencies across workspace
videostream-sys = { version = "1.5.2", path = "crates/videostream-sys" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
