[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Au-Zone Technologies"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/EdgeFirstAI/videostream"
homepage = "https://edgefirst.ai"
rust-version = "1.70"  # MSRV

[workspace.dependencies]
# Runtime dependencies
dma-buf = "0.5.0"
libloading = "0.9.0"
unix-ts = "1.0.0"

# Build dependencies
bindgen = "0.72.1"

# Dev dependencies
rand = "0.9.0"
serial_test = "3.2.0"

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
mp4 = "0.14"
env_logger = "0.11"
log = "0.4"

# Workspace crates
videostream-sys = { version = "2.0.0", path = "crates/videostream-sys" }

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
