[package]
name = "videostream-sys"
description = "Low-level FFI bindings for VideoStream Library - unsafe bindings to libvideostream"
readme = "README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["video", "ffi", "bindings", "videostream", "libvideostream"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]

[features]
default = []

[dependencies]
libloading.workspace = true

[build-dependencies]
bindgen.workspace = true

[package.metadata.release]
# Workspace-level files (pyproject.toml, include/videostream.h, debian/changelog)
# are handled by workspace release config, not by individual crates
pre-release-replacements = []
