[package]
name = "videostream"
description = "Safe Rust bindings for VideoStream Library - zero-copy video frame management and distribution"
readme = "README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["video", "zero-copy", "edge-ai", "computer-vision", "embedded"]
categories = ["computer-vision", "multimedia::video", "api-bindings", "hardware-support"]

[features]
default = []

[dependencies]
dma-buf.workspace = true
unix-ts.workspace = true
videostream-sys.workspace = true

[dev-dependencies]
rand.workspace = true
serial_test.workspace = true

[package.metadata.release]
# Workspace-level files (pyproject.toml, include/videostream.h, debian/changelog)
# are handled by workspace release config, not by individual crates
pre-release-replacements = []
