file(GLOB STB_HEADERS include/*.h)
file(GLOB STB_SOURCES *.c)

add_library(stb STATIC ${STB_HEADERS} ${STB_SOURCES})

target_include_directories(stb PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_compile_definitions(stb PRIVATE
    STBI_FAILURE_USERMSG
    STBI_NO_GIF
    STBIR_DEFAULT_FILTER_UPSAMPLE=STBIR_FILTER_CUBICBSPLINE
    STBIR_DEFAULT_FILTER_DOWNSAMPLE=STBIR_FILTER_BOX)
